# AI-Higher-Ed-RRL

./: .env.example  .gitignore  PROGRESS.md  README.md  pyproject.toml
Manuscript/: README.md  manuscript.md  prisma_data.md
output/: diagnostic_sample.xlsx  rrl_matrix.xlsx  run_manifest.json
rrl/: cli.py  config.py  db.py  harvest.py  http.py  logging_setup.py
rrl/dedup/: grouping.py  merge.py  review.py
rrl/enrich/: doaj.py  eric_flags.py  openalex_flags.py  scopus_citations.py  unpaywall.py
rrl/output/: manifest.py  matrix.py  pdf.py  readme.py  runner.py
rrl/screen/: rules.py  runner.py
rrl/search/: base.py  core_api.py  crossref.py  eric.py  openalex.py  scopus.py  semantic_scholar.py
scripts/: build_manuscript_docx.py  enrich_supplementary_dup_flags.py  ingest_dean_pdfs.py  ingest_supplementary_pdfs.py  probe_sciencedirect.py  rescreen_dean_pdfs.py  rescreen_supplementary_pdfs.py
tests/: test_cli.py  test_cli_all_status.py  test_config.py  test_db.py  test_dedup_cli.py  test_dedup_grouping.py  test_e2e.py  test_enrich_cli.py  test_enrich_doaj.py  test_enrich_eric_flags.py  test_enrich_openalex_flags.py  test_enrich_scopus_citations.py  test_enrich_unpaywall.py  test_export_cli.py  test_harvest.py  test_http.py  test_logging_setup.py  test_output_manifest.py  test_output_matrix.py  test_output_pdf.py  test_output_readme.py  test_screen_cli.py  test_screen_rules.py  test_search_base.py  test_search_core.py  test_search_crossref.py  test_search_eric.py  test_search_openalex.py  test_search_s2.py  test_search_scopus.py
(+12 files in other folders)
